[package]
name = "ilpstreaming"
version = "0.1.0"
authors = []
edition = "2018"

[lib]
name = "ilpstreaming"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.23.0"
interledger = { git = "https://github.com/everknow/interledger-rs", branch="dom" }
hex = "0.4.0"
chrono = "0.4.9"
bytes = { version = "1.0.1" }
